--- a/apps/site/src/styles/tailwind.css
+++ b/apps/site/src/styles/tailwind.css
@@ -65,6 +65,10 @@
     @apply h-5 w-5 text-black/50 dark:text-white/50;
   }
 
+  .main-container {
+    background-color: rgb(6 8 24 / var(--tw-bg-opacity));
+  }
+
   .main-container .main-content {
     @apply transition-all duration-300 lg:ltr:ml-[260px] lg:rtl:mr-[260px];
   }
@@ -441,7 +445,7 @@
     @apply flex;
   }
   .dropdown ul {
-    @apply shadow my-1 min-w-[120px] rounded bg-white p-0 py-2 text-black dark:bg-[#1b2e4b] dark:text-white-dark;
+    @apply my-1 min-w-[120px] rounded bg-white p-0 py-2 text-black dark:bg-[#1b2e4b] dark:text-white-dark;
   }
   .dropdown ul li > a,
   .dropdown ul li > button {
