🎨 style(next.config.js): remove reactStrictMode and add output: 'standalone' 🚀 chore(package.json): update dependencies and devDependencies 🆕 feat(dashboard/form.tsx): add PageForm component 🆕 feat(components/Editor): add dynamic import for ReactQuill component 🎨 style(layout.tsx): add suppressHydrationWarning prop to html tag 🎨 style(Sidebar.tsx): remove unused imports 🎨 style(quill-editor.css): add quill-editor css 🎨 style(tailwind.css): add quill-editor css import to tailwind.css

--- a/apps/site/src/styles/tailwind.css
+++ b/apps/site/src/styles/tailwind.css
@@ -1,3 +1,6 @@
+/* quill-editor css */
+@import './quill-editor.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,7 +20,8 @@
 
   /* Panel */
   .panel {
-    @apply shadow relative rounded-md bg-white p-5 dark:bg-black;
+    @apply  relative rounded-md bg-white p-5 dark:bg-black;
+    /*shadow*/
   }
   /* Navbar */
   .navbar-sticky header,
