--- a/apps/desktop/src/renderer/index.ejs
+++ b/apps/desktop/src/renderer/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="dark h-full" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -8,7 +8,7 @@
     />
     <title>Hello Electron React!</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="dark:bg-black flex h-full">
+    <div id="root" class="dark:bg-black bg-black flex min-h-screen flex-col items-center justify-between h-full w-full"></div>
   </body>
 </html>
